--- a/frontend/style.css
+++ b/frontend/style.css
@@ -177,4 +177,12 @@ header {
     cursor: pointer;
 }
   
-  
+.toast{
+    position:fixed;bottom:1.5rem;right:1.5rem;
+    background:#175EAD;color:#fff;font-weight:bold;
+    padding:.8rem 1.2rem;border-radius:8px;
+    box-shadow:0 2px 6px rgba(0,0,0,.25);z-index:9999;
+    animation:fade 5s forwards;
+  }
+  @keyframes fade{0%,85%{opacity:1}100%{opacity:0}}
+    
